<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SiphatloProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register_customer">RegisterCustomerActivity</string>
    <string name="title_activity_register_shop">RegisterShopActivity</string>
    <string name="title_activity_customer_function">CustomerFunctionActivity</string>
    <string name="title_activity_shop_onwer">ShopOnwerActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_add_menu">AddMenuActivity</string>
    <string name="title_activity_manage_item">ManageItemActivity</string>
    <string name="title_activity_view_customer_order">ViewCustomerOrderActivity</string>
    <string name="sphatlho">SPHATLHO</string>
    <string name="moto">our kasi burger</string>
    <string name="username">enter username</string>
    <string name="news"></string>
    <string name="user">Enter your username</string>
    <string name="password">Enter your password</string>
    <string name="Login">Login</string>
    <string name="registration">New User</string>
    <string name="newsss">Enter your username</string>
    <string name="no"></string>
    <string name="pass">Enter your password</string>
    <string name="the">Our kasi burger</string>
    <string name="paaa">Enter your password</string>
    <string name="cred">Register Your Credentials</string>
    <string name="paaaa">Enter your username</string>
    <string name="passs">Enter your password</string>
    <string name="ent">Enter your password</string>
    <string name="spatlo">SPHATLHO</string>
    <string name="our">Our kasi burger</string>
    <string name="button">Next</string>
    <string name="b">ready</string>

    <string-array name="roles">
        <item>---Choose roles</item>
        <item>Owner</item>
        <item>Customer</item>
    </string-array>

    <string name="hin">Enter your username</string>
    <string name="a">Enter your password</string>
    <string name="qw">Confir your password</string>
    <string name="con">Confirm your password</string>
    <string name="spa">SPHATLHO</string>
    <string name="wel">Welcome Customer</string>
    <string name="reg">Register Here</string>
    <string name="ents">Enter name</string>
    <string name="surn">Enter surname</string>
    <string name="s">Enter surname</string>
    <string name="o">Enter phone number</string>
    <string name="so">Enter phone number</string>
    <string name="regs">Register customer</string>
    <string name="add">Add Menu</string>
    <string name="price">Enter Item Price</string>
    <string name="as"></string>
    <string name="pris">Enter Item Price</string>
    <string name="item">Enter Item Description</string>
    <string name="menu">Add Menu Item</string>
    <string name="mot">Our kasi burger</string>
    <string name="nw">Our kasi burger</string>
    <string name="adds">Add Menu Items</string>
    <string name="manage">Manage Menu</string>
    <string name="view">View Orders</string>
    <string name="owner">Welcome Shop Owner</string>
    <string name="shop">Welcome Shop Owner</string>
    <string name="man">Manage Items</string>
    <string name="w">Welcome</string>
    <string name="shops">Currently Available Shops</string>
    <string name="q">Welcome</string>
    <string name="make">Make orders here</string>
    <string name="today">Today\'s Menu</string>
    <string name="clear">Clear Order</string>
    <string name="su">Submit Order</string>
    <string name="select">Select all orders that</string>
    <string name="ready">e</string>
    <string name="readys">ready</string>
    <string name="r">ready</string>
    <string name="rea">ready</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="none"></string>
    <string name="action_placeOrder">Place Order</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_view_ready_order">ViewReadyOrderActivity</string>
    <string name="action_reject_order">Reject Order</string>
    <string name="action_accept_order">Accept Order</string>
    <string name="title_activity_accepted_orders">AcceptedOrdersActivity</string>
    <string name="action_view_accepted_orders">Accepted Orders</string>

</resources>
