<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@drawable/gray3">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/sphatlho"
        android:textColor="#B40404"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="0dp"
        android:text="@string/the"
        android:textColor="#FE9A2E"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="246dp"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:src="@drawable/ours" />

    <EditText
        android:id="@+id/edUser"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dip"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/newsss"
        android:text="@string/no" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dip"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="228dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dip"
        android:background="@drawable/button_design"
        android:text="@string/Login"
        android:textColor="#FE9A2E" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dip"
        android:background="@drawable/button_design"
        android:text="@string/registration"
        android:textColor="#FE9A2E" />

</LinearLayout>