<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lay"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.siphatloproject.RegisterCustomerActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Provide the Following"
        android:textColor="#B40404"
        android:textSize="27sp" />

    <EditText
        android:id="@+id/edOwName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edOwnSurn"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/ents" />

    <EditText
        android:id="@+id/edOwnSurn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edOwnPhone"
        android:layout_below="@+id/edOwName"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/s" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edOwnPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edOwnSurn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/so"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edCusEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edOwnPhone"
        android:layout_below="@+id/edOwnPhone"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="Enter your email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnRegShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edCusEmail"
        android:layout_alignRight="@+id/edCusEmail"
        android:layout_below="@+id/edCusEmail"
        android:layout_marginTop="58dp"
        android:background="@drawable/button_design"
        android:text="@string/regs"
        android:textColor="#FE9A2E" />

</RelativeLayout>